Update SEO: Change to 'Pessoas, Café e Arte'

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TERRA•ALTA - Café Especial e Experiência Artística</title>
+    <title>TERRA•ALTA - Pessoas, Café e Arte</title>
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração. Nossa missão é entregar a essência do que exploramos de forma autêntica, através da visão de um especialista em café especiais, um artista plástico e um fotógrafo." />
-    <meta name="keywords" content="café especial, terra alta, experiência artística, café de qualidade, São Paulo, arte, fotografia, cultura do café" />
+    <meta name="keywords" content="pessoas, café, arte, terra alta, café especial, São Paulo, fotografia, cultura do café" />
     <meta name="author" content="TERRA ALTA" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="pt-BR" />
@@ -17,7 +17,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://terraalta.xyz/" />
-    <meta property="og:title" content="TERRA•ALTA - Café Especial e Experiência Artística" />
+    <meta property="og:title" content="TERRA•ALTA - Pessoas, Café e Arte" />
     <meta property="og:description" content="Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração." />
     <meta property="og:image" content="https://terraalta.xyz/header_sep.jpg" />
     <meta property="og:site_name" content="TERRA ALTA" />
@@ -26,7 +26,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://terraalta.xyz/" />
-    <meta property="twitter:title" content="TERRA•ALTA - Café Especial e Experiência Artística" />
+    <meta property="twitter:title" content="TERRA•ALTA - Pessoas, Café e Arte" />
     <meta property="twitter:description" content="Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração." />
     <meta property="twitter:image" content="https://terraalta.xyz/header_sep.jpg" />
     
@@ -52,7 +52,7 @@
         "https://www.instagram.com/terra.alta.pjct/"
       ],
       "foundingDate": "2025",
-      "slogan": "Café Especial e Experiência Artística"
+      "slogan": "Pessoas, Café e Arte"
     }
     </script>
   </head>
