Atualizar textos do site: missão e expedição Alto do Caparaó

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TERRA•ALTA - Pessoas, Café e Arte</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração. Nossa missão é entregar a essência do que exploramos de forma autêntica, através da visão de um especialista em café especiais, um artista plástico e um fotógrafo." />
+    <meta name="description" content="Exploramos pequenos sítios, ouvimos histórias reais e vivemos a rotina de quem cultiva café com dedicação, geração após geração. Nossa missão é trazer até você a essência do que encontramos: cafés selecionados com a expertise de um especialista em cafés especiais, a visão de um artista plástico e a captura de um fotógrafo." />
     <meta name="keywords" content="pessoas, café, arte, terra alta, café especial, São Paulo, fotografia, cultura do café" />
     <meta name="author" content="TERRA ALTA" />
     <meta name="robots" content="index, follow" />
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://terraalta.xyz/" />
     <meta property="og:title" content="TERRA•ALTA - Pessoas, Café e Arte" />
-    <meta property="og:description" content="Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração." />
+    <meta property="og:description" content="Exploramos pequenos sítios, ouvimos histórias reais e vivemos a rotina de quem cultiva café com dedicação, geração após geração." />
     <meta property="og:image" content="https://terraalta.xyz/header_sep.jpg" />
     <meta property="og:site_name" content="TERRA ALTA" />
     <meta property="og:locale" content="pt_BR" />
@@ -27,7 +27,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://terraalta.xyz/" />
     <meta property="twitter:title" content="TERRA•ALTA - Pessoas, Café e Arte" />
-    <meta property="twitter:description" content="Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração." />
+    <meta property="twitter:description" content="Exploramos pequenos sítios, ouvimos histórias reais e vivemos a rotina de quem cultiva café com dedicação, geração após geração." />
     <meta property="twitter:image" content="https://terraalta.xyz/header_sep.jpg" />
     
     <!-- Canonical URL -->
@@ -41,7 +41,7 @@
       "name": "TERRA ALTA",
       "url": "https://terraalta.xyz",
       "logo": "https://terraalta.xyz/ta_final_black.png",
-      "description": "Explorar pequenos sítios, escutar histórias reais, e viver a rotina de quem cultiva o café com dedicação, geração após geração.",
+      "description": "Exploramos pequenos sítios, ouvimos histórias reais e vivemos a rotina de quem cultiva café com dedicação, geração após geração.",
       "address": {
         "@type": "PostalAddress",
         "addressLocality": "São Paulo",
