--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TERRA•ALTA - Pessoas, Café e Arte</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Exploramos pequenos sítios, ouvimos histórias reais e vivemos a rotina de quem cultiva café com dedicação, geração após geração. Nossa missão é trazer até você a essência do que encontramos: cafés selecionados com a expertise de um especialista em cafés especiais, a visão de um artista plástico e a captura de um fotógrafo." />
+    <meta name="description" content="Exploramos pequenos sítios, ouvimos histórias reais e vivemos a rotina de quem cultiva café com dedicação, geração após geração. Nossa missão é trazer até você a essência do que encontramos: cafés selecionados por um especialista em café especiais, a visão de um artista plástico e a captura de um fotógrafo." />
     <meta name="keywords" content="pessoas, café, arte, terra alta, café especial, São Paulo, fotografia, cultura do café" />
     <meta name="author" content="TERRA ALTA" />
     <meta name="robots" content="index, follow" />
